# mystd

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  SOURCES.md  main.cpp  string.hpp
mystd/: array.cpp  array.hpp  fixed_string.cpp  fixed_string.hpp  string.cpp  string.hpp
tests/: CMakeLists.txt  checker.cpp  checker.hpp
tests/test_array/: CMakeLists.txt  main.cpp
tests/test_string/: CMakeLists.txt  main.cpp
